feat: about endpoint
added GET v1/about endpoint. returns relevant configuration and version information
