# api-implementation/server/api/controllers/about/router.ts
@@ -1,0 +1,5 @@
+import express from 'express';
+import controller from './controller';
+export default express
+  .Router()
+  .get('/', controller.about);
